# health_agent

./: .env.example  .gitignore  CLAUDE.md  DEBUG_MODE_PLAN.md  PLAN.md  PROGRESS.md  README.md  agents.py  api.py  app.py  common.py  data_prep.py  diet_tools.py  eval_injury_guardrail.py  memory.py  modal_app.py  pyproject.toml  requirements.txt  test_injury_guardrail.py  test_router_memory.py  verify_deployment.py  workout_tools.py
data/: fdc_subset.json  workouts.db
docs/: EVALUATION.md  PLAN.md  PROGRESS.md  SPLITS_PLAN.md  VISION_PLAN.md  WEBAPP_PLAN.md
healthva/: agents.py  common.py  diet_tools.py  memory.py  workout_tools.py
scripts/: data_prep.py  deploy_space.py  eval_injury_guardrail.py  verify_deployment.py
tests/: test_app_ui.py  test_balance.py  test_equipment.py  test_injury_guardrail.py  test_router_memory.py  test_split_catalog.py
