[project]
name = "healthva"
version = "0.1.0"
description = "HealthVA: a routed diet + workout agent with per-user memory, grounded tools, and safety guardrails"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=4.1.0",
    "gradio>=5.23.1",
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-openai>=0.0.5",
    "langgraph>=1.0.4",
    "psycopg[binary]>=3.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
# Only needed for the offline Ollama backend
local = [
    "langchain-ollama>=1.0.0",
]
